Spacing above breadcrumbs fix for sitemap tremplate

--- a/style.css
+++ b/style.css
@@ -1347,6 +1347,7 @@ form div {
 }
 
 #content-sitemap {
+	margin-top: 40px;
 	margin-bottom: 20px;
 }
 
